Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 resources:
   pipelines:
-  - pipeline: build-deploy-pipeline
+  - pipeline: BuildPipeline
     source: static-site
     project: Sandbox
     trigger:
