Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,7 @@ pool:
 resources:
   pipelines:
   - pipeline: BuildPipeline
-    source: static-site
-    project: Sandbox
+    source: petecliff.static-site
     trigger:
       stages:
         - Test
