Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
 resources:
   pipelines:
   - pipeline: BuildPipeline
-    source: petecliff.static-site
+    source: petecliff.aspen
     trigger:
       stages:
         - Test
