Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ resources:
     source: petecliff.aspen
     trigger:
       stages:
-        - Test
+        - DeployTest
 
 steps:
 - task: Maven@3
